Add changes in Playlist files